fix: :bug: Fix the broken UI caused by the previous commit. Elements are not correctly placed & spaced

--- a/data/resources/stylesheets/terminal.css
+++ b/data/resources/stylesheets/terminal.css
@@ -13,5 +13,6 @@
 }
 
 scrollbar {
-    color: white;
+    color: #3584e4;
+    border-color: gray !important;
 }
